Fix help menu spacing

--- a/src/css/components/help-menu.less
+++ b/src/css/components/help-menu.less
@@ -3,7 +3,7 @@
  * =============
  */
 .help-menu {
-  margin: @base-spacing-unit*2.5 @base-spacing-unit;
+  margin: @base-spacing-unit*2+1 @base-spacing-unit;
   width: @base-spacing-unit*2.5;
   padding: 0 @base-spacing-unit*2.5;
   cursor: pointer;
